--- a/home/style.css
+++ b/home/style.css
@@ -1,7 +1,10 @@
 #container {
-  margin-left:auto;
-  margin-right:auto;
+  margin:auto;
+  width:50%;
   top:-20px;
+  padding:10px;
+  border:5px;
+  border-color:#000080;
   position:relative;
 }
 
