--- a/home/style.css
+++ b/home/style.css
@@ -10,6 +10,10 @@
   text-align:center;
 }
 
+body {
+  background-image:"WO.png"
+}
+    
 h1 {
   font-family:'GlacialIndifferenceRegular';
   font-style:normal;
