--- a/home/style.css
+++ b/home/style.css
@@ -5,7 +5,7 @@
   padding:10px;
   border:5px;
   border-color:#000080;
-  background-color:#000080;
+  background-color:#00007A;
   position:relative;
   text-align:center;
 }
