--- a/home/style.css
+++ b/home/style.css
@@ -1,10 +1,9 @@
 #title {
   margin:auto;
-  width:50%;
-  top:-20px;
-  padding:10px;
+  width:25%;
+  padding:30px;
   border:5px;
-  border-color:#000080;
+  border-color:#00007A;
   background-color:#00007A;
   position:relative;
   text-align:center;
