--- a/home/style.css
+++ b/home/style.css
@@ -19,3 +19,14 @@ h1 {
   font-size:2.5em;
   color:#C2C2FF;
 }
+
+#content {
+  margin:auto;
+  width:auto;
+  height:auto;
+  border:5px;
+  border-color:#00007A;
+  background-color:#00007A;
+  position:relative;
+  top:20px;
+}
