--- a/home/style.css
+++ b/home/style.css
@@ -22,8 +22,8 @@ h1 {
 
 #content {
   margin:auto;
-  width:auto;
-  height:auto;
+  width:30%;
+  height:30%;
   border:5px;
   border-color:#00007A;
   background-color:#00007A;
