--- a/home/style.css
+++ b/home/style.css
@@ -23,7 +23,7 @@ h1 {
 #content {
   margin:auto;
   width:75%;
-  height:75%;
+  height:auto;
   border:5px;
   border-color:#00007A;
   background-color:#00007A;
