--- a/home/style.css
+++ b/home/style.css
@@ -3,8 +3,8 @@
   width:25%;
   padding:30px;
   border:5px;
-  border-color:#00007A;
-  background-color:#00007A;
+  border-color:#DBDBF5;
+  background-color:#DBDBF5;
   position:absolute;
   left:0;
   right:0;
@@ -27,8 +27,8 @@ h1 {
   width:40%;
   height:auto;
   border:5px;
-  border-color:#00007A;
-  background-color:#00007A;
+  border-color:#DBDBF5;
+  background-color:#DBDBF5;
   position:relative;
   top:20px;
   text-align:center;
