--- a/home/style.css
+++ b/home/style.css
@@ -19,7 +19,7 @@ h1 {
   font-family:'GlacialIndifferenceRegular';
   font-style:normal;
   font-size:2.5em;
-  color:#C2C2FF;
+  color:#1D1C82;
 }
 
 #content {
