--- a/home/style.css
+++ b/home/style.css
@@ -5,7 +5,7 @@
   border:5px;
   border-color:#DBDBF5;
   background-color:#DBDBF5;
-  position:absolute;
+  position:relative;
   left:0;
   right:0;
   top:0;
