--- a/home/style.css
+++ b/home/style.css
@@ -1,7 +1,7 @@
 #title {
-  margin:auto;
+  margin:0;
   width:100%;
-  padding:20px;
+  padding:0;
   border:5px;
   border-color:#DBDBF5;
   background-color:#DBDBF5;
