--- a/home/style.css
+++ b/home/style.css
@@ -3,8 +3,8 @@
   width:100%;
   padding:0;
   border:5px;
-  border-color:#DBDBF5;
-  background-color:#DBDBF5;
+  border-color:#fffafa;
+  background-color:#fffafa;
   position:relative;
   left:0;
   right:0;
@@ -22,7 +22,7 @@ h1 {
   font-family:'GlacialIndifferenceRegular';
   font-style:normal;
   font-size:2.5em;
-  color:#1D1C82;
+  color:#010042;
 }
 
 #content {
@@ -30,8 +30,8 @@ h1 {
   width:40%;
   height:auto;
   border:5px;
-  border-color:#DBDBF5;
-  background-color:#DBDBF5;
+  border-color:#fffafa;
+  background-color:#fffafa;
   position:relative;
   top:130px;
   text-align:center;
