--- a/home/style.css
+++ b/home/style.css
@@ -28,7 +28,7 @@ h1 {
 
 #content {
   margin:auto;
-  width:25%;
+  width:30%;
   height:auto;
   border:5px;
   border-color:#fffafa;
@@ -42,6 +42,7 @@ h1 {
 
 iframe {
   border:5px;
+  float:right;
 }
 
 #container {
