--- a/home/style.css
+++ b/home/style.css
@@ -20,7 +20,7 @@ body {
 }
     
 h1 {
-  font-family:'GlacialIndifferenceRegular';
+  font-family:'RalewayRegular';
   font-style:normal;
   font-size:2.5em;
   color:#010042;
