--- a/home/style.css
+++ b/home/style.css
@@ -2,8 +2,8 @@
   margin:0;
   width:100%;
   height:10%;
-  padding:0;
-  border:5px;
+  padding: 15px 0;
+  border-width:5px;
   border-color:#fffafa;
   background-color:#fffafa;
   position:relative;
