--- a/home/style.css
+++ b/home/style.css
@@ -45,3 +45,12 @@ iframe {
 #container {
   width:100%;
 }
+
+.video {
+  margin-left:auto;
+  margin-right:auto;
+  display:block;
+  position:relative;
+  max-width:100%;
+  max-height:300px;
+}
