--- a/home/style.css
+++ b/home/style.css
@@ -16,7 +16,13 @@ body {
   margin:0;
   padding:0;
 }
-    
+
+p {
+  font-family: 'RobotoRegular';
+  font-style:normal;
+  color:#010042;
+}
+
 h1 {
   font-family:'RalewayRegular';
   font-style:normal;
@@ -40,6 +46,9 @@ h1 {
 #container {
   width:100%;
 }
+
+#heading {
+  width:100%;
 
 .video {
   margin-left:auto;
