--- a/home/style.css
+++ b/home/style.css
@@ -45,6 +45,10 @@ h1 {
 
 #container {
   width:100%;
+}
+
+#heading {
+  width:100%;
   margin-top:150px;
   width:100%
   height:auto;
@@ -55,9 +59,6 @@ h1 {
   text-align:left;
   padding:10px;
 }
-
-#heading {
-  width:100%;
 
 .video {
   margin-left:auto;
